--- a/ccapdev-lab-reservation-main/backend/process.env
+++ b/ccapdev-lab-reservation-main/backend/process.env
@@ -5,3 +5,5 @@ mongodb+srv://cabataychastine:lciNyDc0VSfDUHfE@cluster0.eooqkjj.mongodb.net/?ret
 PORT=5000
 
 CORS_ALLOWED_ORIGIN=https://lab-reservation-system.vercel.app/
+
+FRONTEND_URL=https://lab-reservation-system.vercel.app/
