--- a/ccapdev-lab-reservation-main/backend/process.env
+++ b/ccapdev-lab-reservation-main/backend/process.env
@@ -1,5 +1,5 @@
 # MongoDB Atlas URI for Node.js server
-mongodb+srv://cabataychastine:lciNyDc0VSfDUHfE@cluster0.eooqkjj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://cabataychastine:lciNyDc0VSfDUHfE@cluster0.eooqkjj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 # Other environment variables (optional)
 PORT=5000
