--- a/ccapdev-lab-reservation-main/backend/process.env
+++ b/ccapdev-lab-reservation-main/backend/process.env
@@ -1,5 +1,5 @@
 # MongoDB Atlas URI for Node.js server
-MONGO_URI=mongodb+srv://cabataychastine:lciNyDc0VSfDUHfE@cluster0.eooqkjj.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://vercel-admin-user-67ecf88bf82db626a478a2a3:cW7AiSc3wbKp2woX@cluster0.eooqkjj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority;
 
 # Other environment variables (optional)
 PORT=5000
