--- a/ccapdev-lab-reservation-main/backend/process.env
+++ b/ccapdev-lab-reservation-main/backend/process.env
@@ -1,5 +1,5 @@
 # MongoDB Atlas URI for Node.js server
-MONGODB_URI=mongodb+srv://vercel-admin-user-67ecf88bf82db626a478a2a3:12345@cluster0.eooqkjj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority&directConnection=true
+MONGODB_URI=mongodb+srv://vercel-admin-user-67ecf88bf82db626a478a2a3:12345@cluster0.eooqkjj.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 
 
 # Other environment variables (optional)
