--- a/ccapdev-lab-reservation-main/backend/package.json
+++ b/ccapdev-lab-reservation-main/backend/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "@vercel/blob": "^0.27.3",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
